@@ -3,7 +3,8 @@ pghoard X.X.X (2016-XX-XX)
 
 * Support for Telegraf statsd
 * Revamped file transformation (encryption, compression) interfaces
-
+* Make sure object storage modules are importable when reading configuration
+  instead of only checking it when they are used
 
 pghoard 1.3.0 (2016-05-30)
 ==========================
